Fix for nav spacing on homepage

--- a/styles/components/_categoryNav.scss
+++ b/styles/components/_categoryNav.scss
@@ -1,5 +1,5 @@
 .category-nav {
-  margin: 10px 0;
+  margin-bottom: 10px;
   text-align: center;
   font-weight: 300;
 
