--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
   display: block;
-  padding-top: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
   font-weight: 300;
